--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.7",
     "clsx": "^2.0.0",
+    "json-2-csv": "^5.5.1",
     "react": "^18.3.0-canary-c3048aab4-20240326",
     "react-dom": "^18.3.0-canary-c3048aab4-20240326",
     "tailwindcss": "3.3.3"
